--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.3.3",
   "description": "A moddle wrapper for CMMN 1.1",
   "scripts": {
+    "all": "grunt",
+    "dev": "grunt auto-test",
     "test": "grunt test"
   },
   "repository": {
@@ -29,6 +31,7 @@
   "devDependencies": {
     "chai": "^1.9.1",
     "grunt": "^0.4.2",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-jshint": "^0.7.2",
     "grunt-contrib-watch": "^0.5.0",
     "grunt-mocha-test": "^0.11.0",
