--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.3.4",
   "description": "A moddle wrapper for CMMN 1.1",
   "scripts": {
-    "all": "grunt",
-    "dev": "grunt auto-test",
-    "test": "grunt test"
+    "all": "run-s lint test",
+    "lint": "eslint .",
+    "dev": "npm test -- --watch",
+    "test": "mocha -r ./test/expect --reporter=spec --recursive test"
   },
   "repository": {
     "type": "git",
@@ -29,21 +30,18 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "chai": "^1.9.1",
-    "grunt": "^0.4.2",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-jshint": "^0.7.2",
-    "grunt-contrib-watch": "^0.5.0",
-    "grunt-mocha-test": "^0.11.0",
-    "grunt-release": "^0.13.0",
+    "chai": "^4.1.2",
+    "eslint": "^4.11.0",
+    "eslint-plugin-mocha": "^4.11.0",
     "ids": "^0.2.0",
     "jsondiffpatch": "^0.1.4",
-    "load-grunt-tasks": "^0.3.0",
+    "mocha": "^4.0.1",
+    "npm-run-all": "^4.1.2",
     "xsd-schema-validator": "^0.3.0"
   },
   "dependencies": {
     "lodash": "^3.0.0",
-    "moddle": "^0.8.0",
-    "moddle-xml": "^0.12.0"
+    "moddle": "^1.2.1",
+    "moddle-xml": "^2.1.1"
   }
 }
