--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.1.2",
-    "eslint": "^4.17.0",
-    "eslint-plugin-mocha": "^4.11.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-bpmn-io": "^0.5.2",
     "esm": "^3.0.15",
     "ids": "^0.2.0",
     "jsondiffpatch": "^0.1.4",
